# asicfire-bot

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1ad2871e2c84_add_timezone_to_datetime_in_posts.py  20d373dbf73c_add_message_id_field_to_posts_table.py  9ebca264bc97_create_users_table.py  a22f09c4fa41_create_posts_table_add_relations_on_.py
bot/: config.py  run.py
bot/db/: engine.py
bot/db/crud/: post_requests.py  user_requests.py
bot/db/models/: post.py  user.py
bot/handlers/user/: __init__.py  correct.py  dont_publish_post.py  ecosystem_poolproof.py  faq.py  next.py  publish_post.py  sell_asic.py  start.py
bot/keyboards/: inline.py
bot/middlewares/: __init__.py
bot/states/: __init__.py  user_states.py
bot/utils/: helpers.py  messages.py
bot/validators/: __init__.py  validate_city.py  validate_comment.py  validate_phone_number.py  validate_price.py  validate_product.py  validate_products_count.py  validate_telegram_username.py
