[tool.poetry]
name = "asicfire-bot"
version = "0.1.0"
description = ""
authors = ["welaskez <nazar.nikitenko.03@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10.0"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
redis = "^5.0.7"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
alembic = "^1.13.2"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
